--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -53,24 +53,6 @@ Vagrant.configure("2") do |config|
     ]
   end
 
-  # Allow connections from the 'vagrant_ansible_key' on all Vagrant VMs. We'll
-  # be using this key to make ssh connections when running Ansible to provision
-  # the Vagrant dev environment (see the 'ansible_local' configuration).
-  config.vm.provision "shell" do |shell|
-    vagrant_ansible_key_pub = File.readlines(
-        File.join(
-            File.dirname(__FILE__), "provisioning/vagrant_ansible_key/id_rsa.pub"
-        )
-    ).first.strip
-    shell.name = "add custom vagrant ansible key to authorized keys"
-    shell.privileged = false
-    shell.inline = <<-SCRIPT
-      if ! grep -q "vagrant ansible key" /home/vagrant/.ssh/authorized_keys ; then
-        echo #{vagrant_ansible_key_pub} >> /home/vagrant/.ssh/authorized_keys
-      fi
-    SCRIPT
-  end
-
   config.apt_proxy.http = "{{ cookiecutter.vagrant_apt_proxy }}"
   config.proxy.http = "{{ cookiecutter.vagrant_http_proxy }}"
   config.proxy.https = "{{ cookiecutter.vagrant_https_proxy }}"
@@ -137,17 +119,16 @@ Vagrant.configure("2") do |config|
 
     provisioner.vm.provision "file" do |file|
       file.source = File.join(
-        File.dirname(__FILE__), "provisioning/vagrant_ansible_key/id_rsa"
+        File.dirname(__FILE__), "provisioning/dev_ssh_config"
       )
-      file.destination = "/home/vagrant/.ssh/vagrant_ansible_key"
+      file.destination = "/home/vagrant/.ssh/config"
     end
 
     provisioner.vm.provision "shell" do |shell|
       shell.name = "ansible setup"
       shell.privileged = false
-      # set ssh key permissions and install ansible requirements
+      # install ansible requirements
       shell.inline = <<-SCRIPT
-        chmod 600 ~/.ssh/vagrant_ansible_key
         sudo apt-get update
         sudo apt-get install -y curl rsync python3 python3-venv python3-pip python3-apt libssl-dev
         python3.8 -m venv ~/provision_venv --system-site-packages
