--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -140,8 +140,8 @@ Vagrant.configure("2") do |config|
       shell.inline = <<-SCRIPT
         sudo apt-get update
         sudo apt-get install -y curl rsync python3 python3-venv python3-pip python3-apt libssl-dev
-        python3.8 -m venv ~/provision_venv --system-site-packages
-        source ~/provision_venv/bin/activate
+        python3.8 -m venv ~/provisioning_venv --system-site-packages
+        source ~/provisioning_venv/bin/activate
         pip install pip==21.0.1 wheel==0.36.2
         pip install -r /vagrant/provisioning/requirements.txt
       SCRIPT
@@ -152,12 +152,12 @@ Vagrant.configure("2") do |config|
     provisioner.vm.provision "ansible_local" do |ansible|
       ansible.compatibility_mode = "2.0"
       ansible.playbook = "playbook.yml"
-      ansible.playbook_command = "~/provision_venv/bin/ansible-playbook"
+      ansible.playbook_command = "~/provisioning_venv/bin/ansible-playbook"
       ansible.provisioning_path = "/vagrant/provisioning"
       ansible.config_file = "ansible-vagrant.cfg"
       ansible.install = false # we do this in the above inline setup script
       ansible.galaxy_role_file = "requirements.yml"
-      ansible.galaxy_command = " ~/provision_venv/bin/ansible-galaxy install --role-file=%{role_file}"
+      ansible.galaxy_command = " ~/provisioning_venv/bin/ansible-galaxy install --role-file=%{role_file}"
       ansible.verbose = false
       ansible.limit = "all,localhost"
       ansible.inventory_path = "environments/dev/inventory"
