--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -29,7 +29,7 @@ Vagrant.configure("2") do |config|
 
   # If we're using VirtualBox as the provider, apply the following config for all VMs
   config.vm.provider :virtualbox do |virtualbox, override|
-    override.vm.box = "ubuntu/focal64"
+    override.vm.box = "ubuntu/hirsute64"
     override.vbguest.auto_update = false
     # There seems to be a VirtualBox bug where the VirtualBox processes on the host machine
     # can get stuck at 100% after resuming from sleep on macOS hosts, even when the guest
@@ -140,7 +140,7 @@ Vagrant.configure("2") do |config|
       shell.inline = <<-SCRIPT
         sudo apt-get update
         sudo apt-get install -y curl rsync python3 python3-venv python3-pip python3-apt libssl-dev
-        python3.8 -m venv ~/provisioning_venv --system-site-packages
+        python3.9 -m venv ~/provisioning_venv --system-site-packages
         source ~/provisioning_venv/bin/activate
         pip install pip==21.0.1 wheel==0.36.2
         pip install -r /vagrant/provisioning/requirements.txt
