--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -29,7 +29,7 @@ Vagrant.configure("2") do |config|
 
   # If we're using VirtualBox as the provider, apply the following config for all VMs
   config.vm.provider :virtualbox do |virtualbox, override|
-    override.vm.box = "ubuntu/hirsute64"
+    override.vm.box = "ubuntu/impish64"
     override.vbguest.auto_update = false
     # There seems to be a VirtualBox bug where the VirtualBox processes on the host machine
     # can get stuck at 100% after resuming from sleep on macOS hosts, even when the guest
