--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/virtualenv.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/virtualenv.yml
@@ -8,6 +8,7 @@
       - python3-dev
       - python3-venv
       - python3-pip
+      - watchman
     state: present
 
 - name: set up virtualenv in new release path
