--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/virtualenv.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/virtualenv.yml
@@ -26,7 +26,10 @@
 - name: install requirements using pip-sync
   become: true
   become_user: "{{ backend_app_user }}"
-  command: "{{ backend_app_virtualenv_dir }}/bin/pip-sync"
+  # Use legacy pip resolver, work around issue https://github.com/pypa/pip/issues/9243
+  # where the new resolver may try to install a sub-dependency version that differs
+  # from the pinned version in requirements.txt
+  command: "{{ backend_app_virtualenv_dir }}/bin/pip-sync --pip-args='--use-deprecated=legacy-resolver'"
   args:
     chdir: "{{ backend_app_deploy_helper.new_release_path }}"
   changed_when: true
